--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+#root{
+  background-image: linear-gradient(rgb(105, 105, 102), rgb(223, 235, 223));
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.travel-form{
+  background-color: rgb(217, 217, 243);
+  padding: 30px;
+  border: 1px solid rgb(241, 241, 241);
+  margin: 30px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 5px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.travel-form label{
+  margin: 0;
+  padding: 0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.travel-form input{
+  width: 80%;
+  border: none;
+  border-bottom: 1px solid rgb(49, 48, 48);
+  padding: 10px 10px 10px 10px;
+  background: rgb(210, 225, 231);
+  margin: 0px 5px 20px 5px;
+  outline: none;
+}
+.googleSignIn{
+  padding: 10px 30px;
+  border: 1px solid rgb(95, 94, 94);
   color: white;
+  display: block;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 10px;
 }
-
-.App-link {
-  color: #61dafb;
+.googleSignIn img{
+  height: 40px;
+  margin: 0;
+  display: block;
+  padding: 0 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.googleSignIn p{
+  margin: 0;
+  padding: 0;
+  display: block;
+}
+.account-existence button{
+  border: none;
+  background-image: linear-gradient(45deg, #11117a, #999946);
+  color: white;
+  padding: 5px 20px;
+  border-radius: 10px;
+  outline: none;
+}
+.account-existence button:active{
+  background: blue;
+  outline: none;
 }
